# educational-service-test

./: .env.sample  .gitignore  .python-version  Dockerfile  README.md  db_init.sh  docker-compose.yml  pyproject.toml
src/: manage.py
src/educational_service/: asgi.py  urls.py  wsgi.py
src/educational_service/api_urls/: __init__.py  auth.py  questions.py
src/educational_service/authentication/: apps.py  backends.py  serializers.py  tests.py  views.py
src/educational_service/questions/: admin.py  apps.py  models.py  serializers.py  views.py
src/educational_service/questions/migrations/: 0001_initial.py
src/educational_service/settings/: env.py  settings.py
